--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
         uses: jannekem/run-python-script-action@v1.7
         with:
           # Python script
-          script: methods.py
+          script: python3 methods.py
             # Fail step if the return code from running the script is non-zero
           fail-on-error: true# optional, default is true
           # Include utility functions
