--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Hello World
-        run: python devops/methods.py
+        run: python devops/add.py
         shell: sh
           
