--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,14 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    inputs:
+      lower_bound:
+        description: 'lower bound of range lookup'
+        required: true
+      upper_bound:
+        description: 'upper bound of range lookup'
+        required: true
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
