--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: lookup_range
-        run: python devops/lookup_range.py
+        run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }}
         shell: sh
           
