--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: add_file
-        run: python devops/add.py ${{ github.event.inputs.id }} ${{ github.event.inputs.data }}
+        run: python devops/add.py ${{ github.event.inputs.id }} ${{ github.event.inputs.filedata }}
         shell: sh
 
 
