--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -24,6 +24,15 @@ jobs:
       - name: add_file
         run: python devops/add.py ${{ github.event.inputs.id }} ${{ github.event.inputs.filedata }}
         shell: sh
+      - name: stage changed files
+        run: git add .
+      - name: commit changed files
+        run: git commit -m "Auto updating TODO.txt"
+      - name: fetch from master
+        run: git fetch origin master
+      - name: push code to master
+        run: git push origin HEAD:master
+
 
 
 
