--- a/.github/workflows/delete_file.yml
+++ b/.github/workflows/delete_file.yml
@@ -18,9 +18,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      - name: add_file
+      - name: delete_file
         run: python devops/delete.py ${{ github.event.inputs.id }}
         shell: sh
+      - name: stage changed files
+        run: git add .
+      - name: commit changed files
+        run: git commit -m "Auto updating TODO.txt"
+      - name: fetch from master
+        run: git fetch origin master
+      - name: push code to master
+        run: git push origin HEAD:master
+
 
 
 
