--- a/.github/workflows/lookup_id.yml
+++ b/.github/workflows/lookup_id.yml
@@ -18,7 +18,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      - name: lookup_range
+      - name: lookup_by_id
         run: python devops/lookup.py ${{ github.event.inputs.id }}
         shell: sh
 
