--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -26,8 +26,12 @@ jobs:
         shell: sh
       - name: stage changed files
         run: git add .
+      - name: identity
+        run: git config --global user.email "epshteinmatthew@gmail.com"
+      - name: identity2
+        run: git config --global user.name "Matthew Epshtein"
       - name: commit changed files
-        run: git commit -m "Auto updating TODO.txt"
+        run: git commit -m "Auto updating files"
       - name: fetch from master
         run: git fetch origin master
       - name: push code to master
