--- a/.github/workflows/lookup_range.yml
+++ b/.github/workflows/lookup_range.yml
@@ -26,6 +26,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
 
       - name: lookup_range
         run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }}
