--- a/.github/workflows/lookup_range.yml
+++ b/.github/workflows/lookup_range.yml
@@ -18,18 +18,41 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  first:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-   
+    outputs:
+      output1: ${{ steps.lookup_range.outputs.test }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: true
+          sparse-checkout: "metadata.json"
+
+      - id: lookup_range
+        run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }} 1 none
+        shell: sh
+
+  second:
+    needs: first
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: true
+          sparse-checkout: ${{needs.job1.outputs.output1}}
 
       - name: lookup_range
-        run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }}
+        run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }} 2 ${{needs.job1.outputs.output1}}
         shell: sh
+
           
