--- a/.github/workflows/lookup_range.yml
+++ b/.github/workflows/lookup_range.yml
@@ -29,8 +29,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
-          sparse-checkout-cone-mode: true
+          sparse-checkout-cone-mode: false
           sparse-checkout: "metadata.json"
+           "devops/lookup_range.py"
 
       - id: lookup_range
         run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }} 1 none
@@ -48,8 +49,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
-          sparse-checkout-cone-mode: true
+          sparse-checkout-cone-mode: false
           sparse-checkout: ${{needs.job1.outputs.output1}}
+            "devops/lookup_range.py"
 
       - name: lookup_range
         run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }} 2 ${{needs.job1.outputs.output1}}
