--- a/.github/workflows/lookup_range.yml
+++ b/.github/workflows/lookup_range.yml
@@ -29,7 +29,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout-cone-mode: false
-          sparse-checkout: "metadata.json"
+          sparse-checkout: |
+            metadata.json
+            devops/lookup_range.py
 
       - id: lookup_range
         run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }} 1 none
@@ -48,7 +50,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout-cone-mode: false
-          sparse-checkout: ${{needs.job1.outputs.output1}}
+          sparse-checkout: |
+            ${{needs.job1.outputs.output1}}
 
       - name: lookup_range
         run: python devops/lookup_range.py ${{ github.event.inputs.lower_bound }} ${{ github.event.inputs.upper_bound }} 2 ${{needs.job1.outputs.output1}}
